# run-kernel

./: Cargo.toml  README.md  build.rs  flake.nix  run-kernel.cfg
assets/: meta-data  user-data
examples/: configuration.nix  flake.nix
init/: Cargo.toml
init/src/: main.rs
src/: bringup.rs  command.rs  config.rs  main.rs  run.rs
