[package]
name = "run-kernel"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4", features = ["derive"]}
anyhow = "1"
serde = {version = "1", features = ["derive"]}
toml = "0.8.19"
reqwest = { version = "0.12.9", features = ["stream"]}
tokio = { version = "1.25", features = ["fs", "rt"]}
futures = "0.3.26"
tinytemplate = "1"
mktemp = "0.5.0"
shell-words = "1"
indicatif = "0.17.3"
config-manager = "0.2.0"
openssl-sys = { version = "0.9.80", features = ["vendored"]}
static_assertions = "1.1.0"
