[package]
name = "run-kernel"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4", features = ["derive"]}
anyhow = "1"
serde = {version = "1", features = ["derive"]}
toml = "0.8.19"
futures = "0.3.26"
mktemp = "0.5.0"
config-manager = "0.2.0"
#openssl-sys = { version = "0.9.80", features = ["vendored"]}
static_assertions = "1.1.0"
drop_guard = "0.3.0"
regex = "1.11.1"
tempfile = "3.19.1"

[build-dependencies]
anyhow = "1"
cpio = "0.4.1"
serde_json = "1.0.140"
zstd = "0.13.3"
